RM-1498 fixed jumping controls after reload, and added top margin of tabbed menu
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14132 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMenu.css
@@ -15,6 +15,7 @@ table.tabbedMenu
 td.tabbedMainMenuCell
 {
   padding: 0;
+  padding-top: 0.25em;
   background-color: #083779;
 }
 
@@ -47,7 +48,7 @@ div.tabbedMainMenu div.tabStripTabsPane
 div.tabbedMainMenu span.tabStripTabWrapper
 {
   padding-top: 0.3em;
-  padding-right: 0.1em;
+  padding-right: 1px;
 }
 
 div.tabbedMainMenu span.tabStripTabSeparator
